[project]
name = "regex-rename"
version = "1.3.3"
description = "Regular expressions bulk rename tool for multiple files"
license = {text = "MIT"}
authors = [
    { name = "igrek51", email = "igrek51.dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/igrek51/regex-rename"


[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["regex_rename"]
include-package-data = true


[project.scripts]
regex-rename = "regex_rename.main:main"
